--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.3",
     "openai": "^4.47.1",
     "pg": "^8.11.5",
     "uuid": "^9.0.1",
