--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.379.0",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.24.0",
+    "recharts": "^3.7.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
