feat: implement system-wide vector embeddings configuration and remove per-user settings

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,11 @@ N8N_WEBHOOK_URL=http://localhost:5678/webhook
 OPENAI_API_KEY=your-openai-api-key-here
 ANTHROPIC_API_KEY=your-anthropic-api-key-here
 
+# Vector Embeddings Configuration (System-Wide)
+# These settings apply to ALL memories. Changing them requires re-embedding existing data.
+EMBEDDING_PROVIDER=openai  # Options: 'openai' or 'ollama'
+EMBEDDING_MODEL=text-embedding-3-small  # OpenAI: text-embedding-3-small, text-embedding-3-large | Ollama: nomic-embed-text, etc.
+
 # Security
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
 
