--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 .env.local
 .env.*.local
 
+# Docker Compose - CasaOS (contains sensitive configuration)
+docker-compose-casaos.yml
+
 # Dependencies
 node_modules/
 */node_modules/
